<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/footer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:layout_marginBottom="50dp">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@android:color/transparent"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:orientation="vertical"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_text_1"
                    android:textSize="@dimen/help_text"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_text_2"
                    android:textSize="@dimen/help_text"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_text_3"
                    android:textSize="@dimen/help_text"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_text_4"
                    android:textSize="@dimen/help_text"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_text_5"
                    android:textSize="@dimen/help_text"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_text_6"
                    android:textSize="@dimen/help_text"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_text_7"
                    android:textSize="@dimen/help_text"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_text_8"
                    android:textSize="@dimen/help_text"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
    <!--  Footer linear layout  -->

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_marginRight="0dp"
        android:background="@android:color/transparent"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/home_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="a"
                android:drawableTop="@color/button_color"
                android:gravity="bottom"
                android:src="@drawable/home_page"
                android:text="@string/homepage"
                android:onClick="goToHomePageActivity" />

            <ImageButton
                android:id="@+id/doctor_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="b"
                android:drawableTop="@color/button_color"
                android:gravity="bottom"
                android:src="@drawable/doctor_image"
                android:text="@string/doctorpage"
                android:onClick="goToDoctorActivity"/>

            <ImageButton
                android:id="@+id/graph_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="c"
                android:drawableTop="@color/button_color"
                android:gravity="bottom"
                android:src="@drawable/graph_image"
                android:text="@string/graphpage"
                android:onClick="goToGraphActivity"/>

            <ImageButton
                android:id="@+id/hist_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:contentDescription="d"
                android:drawableTop="@color/button_color"
                android:gravity="bottom"
                android:src="@drawable/history_image"
                android:text="@string/historypage"
                android:onClick="goToHistoryActivity" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
